--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 京和的奇妙之旅
-subtitle:
-description: 相信相信的力量，并在相信中坚持。走出舒适区，你便开始成长。
+subtitle: 相信相信的力量，并在相信中坚持。走出舒适区，你便开始成长。
+description: かつさん
 author: 京和
 language: zh-Hans
 timezone: Asia/Shanghai
