--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -25,8 +25,8 @@ copyright: false
 
 # reward
 reward_comment: 大爷，觉得好就赏杯咖啡吧^_^
-wechatpay: 微信当面付图片的url
-alipay: 支付宝当面付图片的url
+wechatpay: https://katsu-jing.github.io/images/wx.png
+alipay: https://katsu-jing.github.io/images/zfb.jpg
 
 
 
